add the ability to update

--- a/app/views/priced_items/_form.html.erb
+++ b/app/views/priced_items/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @form_object, url: priced_items_path do |f| %>
+<%= form_for @form_object, url: @form_object.persisted? ? priced_item_path(id: @form_object.id) : priced_items_path do |f| %>
   <%= f.label :title %><br>
   <%= f.text_area :title %>
   <br>
